# gnupg-windows-pinentry

./: CMakeLists.txt  pinentry-config.h.in
